cabal-version: 3.0
name:          layoutz
version:       0.1.0.0
synopsis:      Simple, beautiful CLI output for Haskell
description:   
  Build declarative and composable sections, trees, tables, dashboards for your Haskell applications.
  .
  Zero dependencies, rich text formatting with alignment, underlines, padding, margins.
  Features lists, trees, tables, charts, banners and more.
homepage:      https://github.com/mattlianje/layoutz
bug-reports:   https://github.com/mattlianje/layoutz/issues
license:       Apache-2.0
license-file:  LICENSE
author:        Matthieu Court
maintainer:    matthieu.court@protonmail.com
copyright:     2025 Matthieu Court
category:      Text
build-type:    Simple

extra-source-files:
    README.md
    pix/*.png

source-repository head
  type: git
  location: https://github.com/mattlianje/layoutz
  subdir: hs

library
  exposed-modules:     Layoutz
  build-depends:       base >= 4.7 && < 5
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite layoutz-tests
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  build-depends:       base >= 4.7 && < 5
                     , layoutz
                     , tasty >= 1.4
                     , tasty-hunit >= 0.10
  hs-source-dirs:      .  
  default-language:    Haskell2010
  ghc-options:         -Wall
