cabal-version: 3.0
name:          layoutz
version:       0.3.2.0
synopsis:      Simple, beautiful CLI output
description:
  Zero-dep, compositional terminal output. Use @Layoutz.hs@ like a header file.
  .
  * Tables, trees, lists, boxes, key-value pairs
  * Charts: line, pie, bar, stacked bar, sparkline, heatmap
  * ANSI colors (256 + truecolor), styles, borders
  * Spinners, progress bars, CJK-aware alignment
  .
  Includes an Elm-style TUI runtime with subscriptions, commands, and keyboard handling.
  Apps can also animate inline without taking over the terminal.
homepage:      https://github.com/mattlianje/layoutz
bug-reports:   https://github.com/mattlianje/layoutz/issues
license:       Apache-2.0
license-file:  LICENSE
author:        Matthieu Court
maintainer:    matthieu.court@protonmail.com
copyright:     2025 Matthieu Court
category:      Text
build-type:    Simple

extra-source-files:
    README.md
    pix/*.png

source-repository head
  type: git
  location: https://github.com/mattlianje/layoutz
  subdir: hs

library
  exposed-modules:     Layoutz
  build-depends:       base >= 4.7 && < 5
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall

executable inline-bar
  main-is:             InlineBar.hs
  build-depends:       base >= 4.7 && < 5
                     , layoutz
  hs-source-dirs:      examples
  default-language:    Haskell2010
  ghc-options:         -Wall

executable showcase-app
  main-is:             ShowcaseApp.hs
  build-depends:       base >= 4.7 && < 5
                     , layoutz
  hs-source-dirs:      examples
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite layoutz-tests
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  build-depends:       base >= 4.7 && < 5
                     , layoutz
                     , tasty >= 1.4
                     , tasty-hunit >= 0.10
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
